Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
-
+  /* Images row: Cherish LEFT, Amelia RIGHT */
     .image-row img {
       width: 200px;   /* bigger width */
       height: 200px;  /* bigger height */
@@ -151,6 +151,7 @@
   <p>Kami adalah siswa kelas 8C yang membuat website sederhana untuk tugas Informatika. Website ini berisi biodata tokoh nasional Indonesia dan informasi singkat tentang kami.</p>
 </body>
 </html>
+
 
 
 
