--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -54,7 +54,8 @@
       margin-top: 20px;
       margin-bottom: 20px;
     }
-  /* Images row: Cherish LEFT, Amelia RIGHT */
+
+    /* Images row: Cherish LEFT, Amelia RIGHT */
     .image-row img {
       width: 200px;   /* bigger width */
       height: 200px;  /* bigger height */
@@ -122,39 +123,34 @@
 
   <h1>Biodata Kami</h1>
 
- <!-- Two larger images side by side -->
-<div class="image-row">
-  <img src="WhatsApp Image 2025-11-11 at 22.03.58_effc23eb.jpg" alt="Foto Amelia">
-  <img src="WhatsApp Image 2025-11-11 at 20.52.13_640d3f31.jpg" alt="Foto Cherish">
-</div>
+  <!-- Two larger images side by side -->
+  <div class="image-row">
+    <img src="WhatsApp Image 2025-11-11 at 22.03.58_effc23eb.jpg" alt="Foto Cherish">
+    <img src="WhatsApp Image 2025-11-11 at 20.52.13_640d3f31.jpg" alt="Foto Amelia">
+  </div>
 
-<!-- Two equal tables side by side -->
-<div class="table-row">
-  <table>
-    <tr><th>Biodata</th><th>Keterangan</th></tr>
-    <tr><td>Nama</td><td>Amelia Dario</td></tr>
-    <tr><td>Kelas</td><td>8C</td></tr>
-    <tr><td>Tanggal lahir</td><td>21 Maret 2012</td></tr>
-    <tr><td>Hobi</td><td>Tidur</td></tr>
-  </table>
- 
-   <table>
-    <tr><th>Biodata</th><th>Keterangan</th></tr>
-    <tr><td>Nama</td><td>Cherish Priella Widjaya</td></tr>
-    <tr><td>Kelas</td><td>8C</td></tr>
-    <tr><td>Tanggal lahir</td><td>25 Desember 2011</td></tr>
-    <tr><td>Hobi</td><td>Menari</td></tr>
-  </table>
-</div>
+  <!-- Two equal tables side by side -->
+  <div class="table-row">
+    <!-- Cherish Table (Left) -->
+    <table>
+      <tr><th>Biodata</th><th>Keterangan</th></tr>
+      <tr><td>Nama</td><td>Cherish Priella Widjaya</td></tr>
+      <tr><td>Kelas</td><td>8C</td></tr>
+      <tr><td>Tanggal lahir</td><td>25 Desember 2011</td></tr>
+      <tr><td>Hobi</td><td>Menari</td></tr>
+    </table>
+
+    <!-- Amelia Table (Right) -->
+    <table>
+      <tr><th>Biodata</th><th>Keterangan</th></tr>
+      <tr><td>Nama</td><td>Amelia Dario</td></tr>
+      <tr><td>Kelas</td><td>8C</td></tr>
+      <tr><td>Tanggal lahir</td><td>21 Maret 2012</td></tr>
+      <tr><td>Hobi</td><td>Tidur</td></tr>
+    </table>
+  </div>
 
   <h2>Deskripsi</h2>
   <p>Kami adalah siswa kelas 8C yang membuat website sederhana untuk tugas Informatika. Website ini berisi biodata tokoh nasional Indonesia dan informasi singkat tentang kami.</p>
 </body>
 </html>
-
-
-
-
-
-
-
