--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
 
   <!-- Two equal tables side by side -->
   <div class="table-row">
-    <!-- Cherish Table (Left) -->
-    <table>
-      <tr><th>Biodata</th><th>Keterangan</th></tr>
-      <tr><td>Nama</td><td>Cherish Priella Widjaya</td></tr>
-      <tr><td>Kelas</td><td>8C</td></tr>
-      <tr><td>Tanggal lahir</td><td>25 Desember 2011</td></tr>
-      <tr><td>Hobi</td><td>Menari</td></tr>
-    </table>
-
-    <!-- Amelia Table (Right) -->
+    <!-- Amelia Table (Left) - swapped position -->
     <table>
       <tr><th>Biodata</th><th>Keterangan</th></tr>
       <tr><td>Nama</td><td>Amelia Dario</td></tr>
       <tr><td>Kelas</td><td>8C</td></tr>
       <tr><td>Tanggal lahir</td><td>21 Maret 2012</td></tr>
       <tr><td>Hobi</td><td>Tidur</td></tr>
+    </table>
+
+    <!-- Cherish Table (Right) - swapped position -->
+    <table>
+      <tr><th>Biodata</th><th>Keterangan</th></tr>
+      <tr><td>Nama</td><td>Cherish Priella Widjaya</td></tr>
+      <tr><td>Kelas</td><td>8C</td></tr>
+      <tr><td>Tanggal lahir</td><td>25 Desember 2011</td></tr>
+      <tr><td>Hobi</td><td>Menari</td></tr>
     </table>
   </div>
 
